@@ -2,6 +2,7 @@
 	* (seebs) notes on some Futures planning.
 	* (seebs) Typo/formatting issue in man page.
 	* (seebs) message formatting/clarity cleanup and typo fixes.
+	* (seebs) First draft of passwd_fallback implementation.
 
 2014-01-15:
 	* (seebs) performance test/test case updates.
